# sl_triggers

./: .gitignore  LICENSE  PapyChecker.java  README.md  SltParser.java  assemble.cmd  build.cmd  catchup.cmd  justfile  ppj-adult-general.ppj  ppj-core.ppj  ppj-sexlab.ppj  ppj-sexlabplusplus.ppj  skyrimse.ppj  todo.txt  update-version.ps1
docs/: Events_Triggers_and_Filters.md  Forms_and_FormIDs.md  Function_Libraries.md  Function_Library_Development.md  Scripts.md
fomod/fomod/: ModuleConfig.xml  info.xml
inc/: inc.cmd
inc/beth/: TIF__000994F5.psc  blah.cmd
plugin/sl-triggers/: CMakeLists.txt  CMakePresets.json
plugin/sl-triggers/cmake/: headerlist.cmake  sourcelist.cmake  x64-windows-skse.cmake
plugin/sl-triggers/src/: core.cpp  core.h  engine.cpp  engine.h  fact_finder.cpp  main.cpp  skse_events.cpp  skse_events.h  sl_triggers.cpp  sl_triggers.h  util.cpp  util.h
sl_triggers_internal/: CMakeLists.txt  README.md  vcpkg.json
sl_triggers_internal/src/: GameEventHandler.cpp  Hooks.cpp  PCH.h  Plugin.cpp
src/: sl_triggers.esp  sl_triggers_CHANGELOG.txt  sl_triggers_commands.txt  sl_triggers_function_library.md  sl_triggers_function_library.txt  sl_triggers_read.txt  sl_triggers_script_description.txt  sl_triggers_script_descriptions.md  sl_triggers_sltscripts.md  sl_triggers_sltscripts.txt  sl_triggers_whatsnew.txt
src/interface/translations/: sl_triggers_CHINESE.txt  sl_triggers_ENGLISH.txt
src/scripts/: sl_triggersCmd.pex  sl_triggersConsole.pex  sl_triggersMain.pex  sl_triggersMfg.pex  sl_triggersSetup.pex
src/source/: sl_triggersAPI.psc
(+175 files in other folders)
